--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <div class="card">
                 <div class="card-image">
-                    <img src="./assets/img/planta1.jpg" alt="Imagen de ejemplo">
+                    <img src="./assets/img/planta1.jpg" alt="Planta1">
                 </div>
                 <div class="card-content">
                     <h2>Título</h2>
@@ -49,7 +49,7 @@
 
             <div class="card">
                 <div class="card-image">
-                    <img src="./assets/img/planta2.jpg" alt="Imagen de ejemplo">
+                    <img src="./assets/img/planta2.jpg" alt="Planta2">
                 </div>
                 <div class="card-content">
                     <h2>Título</h2>
@@ -60,7 +60,7 @@
 
             <div class="card">
                 <div class="card-image">
-                    <img src="./assets/img/planta1.jpg" alt="Imagen de ejemplo">
+                    <img src="./assets/img/planta1.jpg" alt="Planta3">
                 </div>
                 <div class="card-content">
                     <h2>Título</h2>
@@ -71,7 +71,7 @@
 
             <div class="card">
                 <div class="card-image">
-                    <img src="./assets/img/planta3.jpg" alt="Imagen de ejemplo">
+                    <img src="./assets/img/planta3.jpg" alt="Planta4">
                 </div>
                 <div class="card-content">
                     <h2>Título</h2>
@@ -82,7 +82,7 @@
 
             <div class="card">
                 <div class="card-image">
-                    <img src="./assets/img/planta4.jfif" alt="Imagen de ejemplo">
+                    <img src="./assets/img/planta4.jfif" alt="Planta5">
                 </div>
                 <div class="card-content">
                     <h2>Título</h2>
@@ -93,7 +93,7 @@
 
             <div class="card">
                 <div class="card-image">
-                    <img src="./assets/img/planta5.png" alt="Imagen de ejemplo">
+                    <img src="./assets/img/planta5.png" alt="Planta6">
                 </div>
                 <div class="card-content">
                     <h2>Título</h2>
